feat: kick group member API
