# doc/swagger.yaml
@@ -914,6 +914,19 @@ paths:
       - groups
   /api/v1/groups/{groupID}/members/{userID}:
     delete:
+      parameters:
+      - description: group id
+        in: path
+        name: groupID
+        required: true
+        schema:
+          type: integer
+      - description: friend id
+        in: path
+        name: userID
+        required: true
+        schema:
+          type: integer
       responses:
         "200":
           description: OK
